--- a/style/posts.css
+++ b/style/posts.css
@@ -15,7 +15,7 @@
 .story-content {
     font-size: 16px;
     margin: 0.5%;
-    margin-top: 2%;
+    margin-top: 15px;
     font-family: Arial;
     text-indent: 15px;
 }
